package PresentationFilms;

public enum GenreFilm {
    ACTION, ROMANCE, COMEDIE, ANIMATION, AVENTURE, HORREUR, THRILLER, DRAME
}
