package PresentationFilms;

public enum ModePaiement {
    CB, PLAYBAL, APPLE_PAY, VIREMENT
}
