package PresentationFilms;

public enum StatutPaiement {
    VALIDE, REFUSE, EN_ATTENTE
}
