@startuml
skinparam classAttributeIconSize 0

abstract class Utilisateur {
    - idUtilisateur : int
    - nomUtilisateur : String
    - prenomUtilisateur : String
    - email : String
    - motDePasse : String
    - estConnecte : boolean
    + seConnecter(email : String, mdp : String) : boolean
    + seDeconnecter() : void
    + changerMotDePasse(ancien : String, nouveau : String) : boolean
    + estMajeur() : boolean
    + aUnEmailValide() : String
}

class Administrateur extends Utilisateur {
    + consulterTopPopulaires(contenus : List<Contenu>) : void
    + consulterRevenus(listeClients : List<Client>) : double
    + voirAbonneParType(listeClients : List<Client>, type : TypeAbonnement) : List<Client>
    + ajouterContenu(catalogue : List<Contenu>, nouveauContenu : Contenu) : void
    + supprimerContenu(catalogue : List<Contenu>, id : int) : void
}

class Client extends Utilisateur {
    - abonnement : Abonnement
    - historique : List<Contenu>
    - historiqueVisionnage : List<Contenu>
    + voirHistorique() : List<Contenu>
    + chercherFilms(tousFilms : List<Film>, titre : String) : List<Film>
    + chercherFilmsByGenre(tousFilms : List<Film>, genre : GenreFilm) : List<Film>
    + ajouterAuxFavoris(contenu : Contenu) : void
    + retirerDesFavoris(contenu : Contenu) : void
    + regarder(contenu : Contenu) : void
}

abstract class Contenu {
       - idContenu : int
       - genreFilm : GenreFilm
       - titre : String
       - popularite : long
       - listeAvis : List<Avis>
       - listeFavoris : List<Client>
       + ajouterAvis(avis : Avis) : void
       + estDisponible() : boolean
       + ajouterAuxFavoris(client : Client) : void
       + incrementePopularite() : void
}

class Film extends Contenu {
    - duree : LocalTime
}

class Abonnement {
    - prix : double
    - idAbonnement : int
    - typeAbonnement : TypeAbonnement
    + getPrix() : double
}

class Serie extends Contenu {
    - nombreSaisons : int
    - nombreEpisode : int
    - dureeEpisode : LocalTime
    + ajouterEpisode(saison : int, titre : String) : void
    + getNombreTotalEpisodes() : int
}

class Paiement {
   - idPaiement : int
   - montant : double
   - modePaiement : ModePaiement
   - statutPaiement : StatutPaiement
   + traiterPaiement() : boolean

}

class Avis{
   - nomUtilisateur
   - note : int
   - commentaire : String
}

enum ModePaiement {
    CB, PAYPAL, APPLE_PAY
}

enum StatutPaiement {
    EN_ATTENTE, VALIDE, REFUSE
}

enum TypeAbonnement {
    STANDARD, PREMIUM, VIP
}

enum GenreFilm {
    ACTION, ROMANCE, COMEDIE
}

Client "1" --> "0..1" Abonnement : possède
Client "1" --> "0..*" Contenu : regarde
Client "1" --> "*" Paiement : effectue
Contenu "1" *-- "0..*" Avis : contient
Contenu o-- GenreFilm : genre
Paiement ..> ModePaiement : utilise
Paiement ..> StatutPaiement : possède
Abonnement --> TypeAbonnement : utilise
@enduml